--- a/Blackjack/src/Blackjack.Tests/Blackjack.Tests.csproj
+++ b/Blackjack/src/Blackjack.Tests/Blackjack.Tests.csproj
@@ -7,6 +7,8 @@
 
 	<ItemGroup>
 		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.13.0" />
+		<PackageReference Include="Selenium.Chrome.WebDriver" Version="2.25.0" />
+		<PackageReference Include="Selenium.WebDriver" Version="4.33.0" />
 		<PackageReference Include="xunit" Version="2.9.3" />
 		<PackageReference Include="xunit.runner.visualstudio" Version="3.1.0">
 		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
