--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,11 +21,18 @@ steps:
   inputs:
     restoreSolution: '$(solution)'
 
+# Separat publish-steg
+- task: DotNetCoreCLI@2
+  inputs:
+    command: 'publish'
+    arguments: '--configuration $(buildConfiguration) --output $(Build.ArtifactStagingDirectory)/WebApp'
+
+
 # 3️⃣ Bygg applikationen med MSBuild
 - task: VSBuild@1
   inputs:
     solution: '$(solution)'
-    msbuildArgs: '/p:DeployOnBuild=true /p:WebPublishMethod=Package /p:PackageAsSingleFile=true /p:SkipInvalidConfigurations=true /p:DesktopBuildPackageLocation="$(build.artifactStagingDirectory)/WebApp.zip" /p:DeployIisAppPath="Default Web Site"'
+    msbuildArgs: '/p:DeployOnBuild=true /p:PublishProfile=FolderProfile /p:PublishDir="$(build.artifactStagingDirectory)/WebApp"'
     platform: '$(buildPlatform)'
     configuration: '$(buildConfiguration)'
 
@@ -36,8 +43,10 @@ steps:
     configuration: '$(buildConfiguration)'
 
 # 5️⃣ Publicera till Azure App Service
-- task: AzureWebApp@1
+- task: AzureRmWebAppDeployment@4
   inputs:
+    ConnectionType: 'AzureRM'
     azureSubscription: 'webApp'
-    appName: 'BlackJack'
+    appType: 'webApp'
+    WebAppName: 'BlackJack'
     package: '$(Build.ArtifactStagingDirectory)/WebApp.zip'
