--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,11 +20,14 @@ steps:
     projects: '**/*Web.csproj'
 
 - task: DotNetCoreCLI@2
+  displayName: 'Publish WebApp'
   inputs:
     command: 'publish'
-    publishWebProjects: true
+    publishWebProjects: false
+    projects: '**/Blackjack.Web.csproj'
     arguments: '--configuration $(buildConfiguration) --output $(outputDir)'
     zipAfterPublish: false
+
 
 - task: PublishBuildArtifacts@1
   inputs:
