--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -19,12 +19,20 @@ steps:
     command: 'restore'
     projects: '**/*Web.csproj'
 
-# 🔹 Kör tester och publicera resultaten
+# 🔹 Bygg testprojektet
+- task: DotNetCoreCLI@2
+  displayName: 'Build Test Project'
+  inputs:
+    command: 'build'
+    projects: 'src/Blackjack.Tests/Blackjack.Tests.csproj'
+    arguments: '--configuration $(buildConfiguration)'
+
+# 🔹 Kör tester med kodtäckning
 - task: VSTest@2
-  displayName: 'Run Tests and Publish Results'
+  displayName: 'Run Unit Tests and Publish Results'
   inputs:
     testSelector: 'testAssemblies'
-    testAssemblyVer2: '**/Tests/*.dll'
+    testAssemblyVer2: 'src/Blackjack.Tests/bin/**/*.dll'
     searchFolder: '$(Build.SourcesDirectory)'
 
 - task: DotNetCoreCLI@2
