--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -31,7 +31,7 @@ steps:
   displayName: 'Run Unit Tests and Publish Results'
   inputs:
     testSelector: 'testAssemblies'
-    testAssemblyVer2: 'src/Blackjack.Tests/bin/Release/net9.0/**/*.dll'
+    testAssemblyVer2: 'src/Blackjack.Tests/bin/Release/net9.0/Blackjack.Tests.dll'
     searchFolder: '$(Build.SourcesDirectory)'
 
 - task: DotNetCoreCLI@2
